--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Instant Music Downloader</title>
+  <title>EzMusic Floral</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet">
 </head>
