--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app"></div>
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
+	<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
 
 </html>
