--- a/index.html
+++ b/index.html
@@ -9,7 +9,100 @@
 </head>
 
 <body>
+	<div class="dropdown" id="header">
+	<button class="dropbtn" id="title">
+		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
+	</button>
+  <div class="dropdown-content">
+	<p><a href="#" data-toggle="modal" data-target="#myModal1">Downloads <i class="fa fa-download" aria-hidden="true"></i></a></p>
+	<p><a href="#" data-toggle="modal" data-target="#myModal2">About <i class="fa fa-info-circle" aria-hidden="true"></i></a></p>
+	<p><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></p>	
+  </div>
+</div>
+	
+<!-- Modal1 -->
+<div id="myModal1" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <!-- Modal content-->
+    <div class="modal-content">
+    <div class="modal-body"><br>
+      <b>Android</b>
+      <p><a href="#" target="_blank">Google Play Store <i class="fa fa-android"></i></a><p/>
+      <b>Windows</b>
+      <p><a href="#" target="_blank">32 Bit Systems <i class="fa fa-windows"></i></a><p/>
+      <p><a href="#" target="_blank">64 Bit Systems <i class="fa fa-windows"></i></a><p/>
+      <b>Linux</b>
+      <p><a href="#" target="_blank">32 Bit Systems <i class="fa fa-linux"></i></a><p/>
+      <p><a href="#" target="_blank">64 Bit Systems <i class="fa fa-linux"></i></a><p/>
+      <b>OSX</b>
+      <p><a href="#" target="_blank">For Mavericks+ <i class="fa fa-apple"></i></a><p/>
+    </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+      </div>
+    </div>
+
+  </div>
+</div>
+	
+<!-- Modal2 -->
+<div id="myModal2" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-body"><br>
+			<p>Brought to you by...</p><br>
+        <img src="dclogo.png"></img><br>
+			<p>"Learning every thing the hard way<br> so you don't have to!"</p><br>
+				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-github-alt" aria-hidden="true"></i></a>
+			</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+      </div>
+    </div>
+
+  </div>
+</div>
+	
+<!-- Modal3 -->
+<div id="myModal3" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-body"><br>
+        <b><a href="tel:+16197864687" target="_top"> Call <i class="fa fa-phone"></i></a></b><br></br>
+        <b><a href="sms:+16197864687" target="_top"> Text <i class="fa fa-send"></i></a></b><br></br>
+        <b><a href="mailto:duncecapsoftware@gmail.com?Subject=About%20EzMusic" target="_top"> Email <i class="fa fa-envelope"></i></a></b>
+        <p>  or...</p>
+        <b><a href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank"> Leave a note <i class="fa fa-edit"></i></a></b>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+      </div>
+    </div>
+
+  </div>
+</div>
+	
   <div id="app"></div>
+		
+<script>
+$(document).ready(function(){
+    $("#myBtn1").click(function(){
+        $("#myModal1").modal();
+    });
+});
+$(document).ready(function(){
+    $("#myBtn2").click(function(){
+        $("#myModal2").modal();
+    });
+});
+$(document).ready(function(){
+    $("#myBtn3").click(function(){
+        $("#myModal3").modal();
+    });
+});
+</script>
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
