--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
   <title>EzMusic Floral</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet">
+	<style type="text/css">
+body {
+    font-family: Comic Sans MS;
+	  font-size: 20px;
+	  font-weight:bold;
+	  text-shadow: 0 -1 rgba(0,0,0,.8);
+    transition: background-color.5s;
+}
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+	
+#header {
+	  width:100%;
+	  height:32px;
+    position:fixed;
+    top:0px;
+	  left:0px;
+}
+.modal-body {
+	  color: #121212;
+}
+	
+*i, *a, *button {
+	  cursor:pointer;
+}
+	/* Dropdown Button */
+.dropbtn {
+    background: transparent;
+    color: #ffffff;
+	  border: 0px;
+    padding: 7px;
+    font-size: 16px;
+    cursor: pointer;
+	  position: absolute;
+	  top: 0px;
+	  left: 4px; 
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+	  border-radius: 6px;
+    background-color: #f9f9f9;
+    min-width: 140px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: #121212;
+    padding: 6px 8px;
+    text-decoration: none;
+    display: block;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #121212; color: #ffffff;}
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+</style>
 </head>
 
 <body>
