art credit added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@ body {
     top:0px;
 	  left:0px;
 }
+		
+#credit {
+		position:absolute;
+	  bottom: 6px;
+	  right: 10px;
+	  color: #ffffff;
+	  background: transparent;
+}		
+		
 .modal-body {
 	  color: #121212;
 }
