--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3f.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
-	<style type="text/css">
+<style type="text/css">
 body {
     font-family: Comic Sans MS;
 	  font-size: 20px;
@@ -19,20 +19,7 @@ body {
 	  text-shadow: 0 -1 rgba(0,0,0,.8);
     transition: background-color.5s;
 }
-#main {
-    transition: margin-left .5s;
-    padding: 16px;
-}
-	
-#header {
-	  width:100%;
-	  height:32px;
-    position:fixed;
-    top:0px;
-	  left:0px;
-}
-		
-#credit {
+div#credit {
 		position:absolute;
 	  bottom: 6px;
 	  right: 10px;
@@ -56,8 +43,8 @@ body {
     font-size: 16px;
     cursor: pointer;
 	  position: absolute;
-	  top: 0px;
-	  left: 4px; 
+    top:0px;
+	  left:0px;
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -89,14 +76,17 @@ body {
 }
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #ffffff;
+	  color: #121212;
 }
 </style>
 </head>
-
 <body>
-	<div class="dropdown" id="header">
-	<button class="dropbtn" id="title">
+ <div id="credit">
+	 <p>Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
+ </div>	
+<div class="dropdown">
+	<button class="dropbtn">
 		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
@@ -105,11 +95,9 @@ body {
 	<p><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></p>	
   </div>
 </div>
-	
 <!-- Modal1 -->
 <div id="myModal1" class="modal fade" role="dialog">
   <div class="modal-dialog modal-sm">
-    <!-- Modal content-->
     <div class="modal-content">
     <div class="modal-body"><br>
       <b>Android</b>
@@ -127,14 +115,11 @@ body {
         <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
-
   </div>
 </div>
-	
 <!-- Modal2 -->
 <div id="myModal2" class="modal fade" role="dialog">
   <div class="modal-dialog">
-    <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body"><br>
 			<p>Brought to you by...</p><br>
@@ -146,14 +131,11 @@ body {
         <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
-
   </div>
 </div>
-	
 <!-- Modal3 -->
 <div id="myModal3" class="modal fade" role="dialog">
   <div class="modal-dialog modal-sm">
-    <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body"><br>
         <b><a href="tel:+16197864687" target="_top"> Call <i class="fa fa-phone"></i></a></b><br></br>
@@ -166,12 +148,9 @@ body {
         <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
-
   </div>
 </div>
-	
   <div id="app"></div>
-		
 <script>
 $(document).ready(function(){
     $("#myBtn1").click(function(){
@@ -188,9 +167,8 @@ $(document).ready(function(){
         $("#myModal3").modal();
     });
 });
-</script>
+</script>	
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
-
 </html>
