--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 	  text-shadow: 0 -1 rgba(0,0,0,.8);
     transition: background-color.5s;
 }
-div#credit {
+#credit {
 		position:absolute;
 	  bottom: 6px;
 	  right: 10px;
@@ -82,9 +82,7 @@ div#credit {
 </style>
 </head>
 <body>
- <div id="credit">
-	 <p>Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
- </div>	
+	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
 <div class="dropdown">
 	<button class="dropbtn">
 		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
@@ -112,7 +110,7 @@ div#credit {
       <p><a href="#" target="_blank">For Mavericks+ <i class="fa fa-apple"></i></a><p/>
     </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
@@ -128,7 +126,7 @@ div#credit {
 				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-github-alt" aria-hidden="true"></i></a>
 			</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
@@ -145,7 +143,7 @@ div#credit {
         <b><a href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank"> Leave a note <i class="fa fa-edit"></i></a></b>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
