--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@ body {
 }
 #credit {
 		position:absolute;
-	  bottom: 6px;
+	  bottom: 10px;
 	  right: 10px;
 	  color: #ffffff;
 	  background: transparent;
 }		
-		
+#header {
+	  width:100%;
+	  height:32px;
+    position:fixed;
+    top:0px;
+	  left:0px;
+}
 .modal-body {
 	  color: #121212;
 }
@@ -43,8 +49,8 @@ body {
     font-size: 16px;
     cursor: pointer;
 	  position: absolute;
-    top:0px;
-	  left:0px;
+	  top: 0px;
+	  left: 4px; 
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -83,7 +89,7 @@ body {
 </head>
 <body>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
-<div class="dropdown">
+<div class="dropdown" id="header">
 	<button class="dropbtn">
 		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
 	</button>
