please change my code to what ever you want! Why even write it?

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ body {
 	  color: #121212;
 }
 	
+
 *i, *a, *button {
 	  cursor:pointer;
 }
@@ -82,15 +83,15 @@ body {
 }
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #ffffff;
-	  color: #121212;
+    background-color: #3e8e41;
 }
 </style>
 </head>
+
 <body>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
 <div class="dropdown" id="header">
-	<button class="dropbtn">
+	<button class="dropbtn" id="title">
 		<big><i class="fa fa-headphones" aria-hidden="true"></i><em> EzMusic</em></big>
 	</button>
   <div class="dropdown-content">
@@ -99,9 +100,11 @@ body {
 	<p><a href="#" data-toggle="modal" data-target="#myModal3">Contact <i class="fa fa-edit" aria-hidden="true"></i></a></p>	
   </div>
 </div>
+	
 <!-- Modal1 -->
 <div id="myModal1" class="modal fade" role="dialog">
   <div class="modal-dialog modal-sm">
+    <!-- Modal content-->
     <div class="modal-content">
     <div class="modal-body"><br>
       <b>Android</b>
@@ -116,14 +119,17 @@ body {
       <p><a href="#" target="_blank">For Mavericks+ <i class="fa fa-apple"></i></a><p/>
     </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
+
   </div>
 </div>
+	
 <!-- Modal2 -->
 <div id="myModal2" class="modal fade" role="dialog">
   <div class="modal-dialog">
+    <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body"><br>
 			<p>Brought to you by...</p><br>
@@ -132,14 +138,17 @@ body {
 				<a href="https://github.com/lifeluvr?tab=repositories">Github Repositories <i class="fa fa-github-alt" aria-hidden="true"></i></a>
 			</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
+
   </div>
 </div>
+	
 <!-- Modal3 -->
 <div id="myModal3" class="modal fade" role="dialog">
   <div class="modal-dialog modal-sm">
+    <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-body"><br>
         <b><a href="tel:+16197864687" target="_top"> Call <i class="fa fa-phone"></i></a></b><br></br>
@@ -149,9 +158,10 @@ body {
         <b><a href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank"> Leave a note <i class="fa fa-edit"></i></a></b>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-danger btn-xl" data-dismiss="modal"><i class="fa fa-close" aria-hidden="true"></i></button>
       </div>
     </div>
+
   </div>
 </div>
   <div id="app"></div>
