--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style type="text/css">
 body {
     font-family: Comic Sans MS;
-	  font-size: 20px;
+	  font-size: 16px;
 	  font-weight:bold;
 	  text-shadow: 0 -1 rgba(0,0,0,.8);
     transition: background-color.5s;
@@ -38,7 +38,7 @@ body {
 }
 	
 
-*i, *a, *button {
+*i, *a, *span, *button {
 	  cursor:pointer;
 }
 	/* Dropdown Button */
@@ -64,26 +64,26 @@ body {
     position: absolute;
 	  border-radius: 6px;
     background-color: #f9f9f9;
-    min-width: 140px;
+    color: #121212;
+    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: #121212;
     padding: 6px 8px;
     text-decoration: none;
     display: block;
 }
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #121212; color: #ffffff;}
+.dropdown-content a:hover {background-color: #121212; color: #f9f9f9;}
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    border: 0px;
 }
 </style>
 </head>
