--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ body {
 .modal-body {
 	  color: #121212;
 }
-	
+*h1, *h2, *h3 {
+	  font-size: 16px;
+}
 
 *i, *a, *span, *button {
 	  cursor:pointer;
@@ -51,7 +53,7 @@ body {
     cursor: pointer;
 	  position: absolute;
 	  top: 0px;
-	  left: 4px; 
+	  left: 0px; 
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
