--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ body {
 .modal-body {
 	  color: #121212;
 }
-*h1, *h2, *h3 {
-	  font-size: 16px;
+*h2 {
+  font-size:24px; 
+	margin-top: -60px;
 }
 
 *i, *a, *span, *button {
