Ezmusic Title added

--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@ body {
 	  color: #ffffff;
 	  background: transparent;
 }		
+	#header {
+		background: rgba(0,0,0,0);
+		color: #FFF;
+	  position:absolute;
+		top: 0px;
+		height: 40px;
+		width: 100%;
+	}	
 	</style>
 </head>
 
 <body>
+	<div id="header"><h2>EzMusic</h2></div>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
