--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@ body {
 		color: #FFF;
 	  position:absolute;
 		top: 0px;
+		left: 0px;
 		height: 40px;
-		width: 100%;
+		width: 180px;
 	}	
 	</style>
 </head>
 
 <body>
-	<div id="header"><h3>EzMusic</h3></div>
+	<div id="header"><big><em>EzMusic</em></big></div>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
