--- a/index.html
+++ b/index.html
@@ -33,11 +33,23 @@ body {
 		top: 0px;
 		left: 0px;
 	}	
+	#thanks {
+		background: rgba(0,0,0,0);
+		color: #FFF;
+	  position:absolute;
+		top: 0px;
+		right: 0px;
+	}	
 	</style>
 </head>
 
 <body>
 	<div id="header"><big><em>EzMusic</em></big></div>
+	<div id="thanks"><p><em>Dedicated to my good friend Ms.Nancy!</em><br>
+	 From day one, you have supported and believed in my dream!<br>
+	 And, when most folks would snicker and laugh, you never did!<br>
+	 This one is for you!<br>	
+		<em>Thank You!</em></p></div>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
