--- a/index.html
+++ b/index.html
@@ -33,23 +33,47 @@ body {
 		top: 0px;
 		left: 0px;
 	}	
-	#thanks {
+	#title {
+		border: 0px;
 		background: rgba(0,0,0,0);
-		color: #FFF;
-	  position:absolute;
-		top: 0px;
-		right: 0px;
+		color:#FFF;	
 	}	
 	</style>
+	<script>
+	    $(window).load(function(){
+                $('#onload').modal('show');
+            });
+	</script>
 </head>
 
 <body>
-	<div id="header"><big><em>EzMusic</em></big></div>
-	<div id="thanks"><p><em>Dedicated to my good friend Ms.Nancy!</em><br>
+	<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"  id="onload">
+
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">×</button>
+          <h4 class="modal-title"><i class="fa fa-exclamation-circle"></i><em>Dedicated to my good friend Ms.Nancy!</em></h4>
+        </div>
+        <div class="modal-body">
+         <p>
 	 From day one, you have supported and believed in my dream!<br>
 	 And, when most folks would snicker and laugh, you never did!<br>
-	 This one is for you!<br>	
-		<em>Thank You!</em></p></div>
+	 I'll never forget what you have done for me! This one is for you!<br>	
+		<em>Thank You!</em></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">x</button>
+        </div>
+      </div>
+
+    </div>
+</div>
+	
+	
+	<div id="header"><button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg"><big><em>EzMusic</em></big></button>   </div>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
