--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@ body {
 		color:#FFF;	
 	}	
 	</style>
-	<script>
-	    $(window).load(function(){
-                $('#onload').modal('show');
-            });
-	</script>
 </head>
 
 <body>
@@ -54,8 +49,8 @@ body {
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">×</button>
-          <h4 class="modal-title"><i class="fa fa-exclamation-circle"></i><em>Dedicated to my good friend Ms.Nancy!</em></h4>
+          <!--button type="button" class="close" data-dismiss="modal">×</button-->
+          <h4 class="modal-title"><em>Dedicated to my good friend Ms.Nancy!</em></h4>
         </div>
         <div class="modal-body">
          <p>
@@ -65,7 +60,7 @@ body {
 		<em>Thank You!</em></p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">x</button>
+          <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
         </div>
       </div>
 
@@ -73,10 +68,15 @@ body {
 </div>
 	
 	
-	<div id="header"><button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg"><big><em>EzMusic</em></big></button>   </div>
+	<div id="header"><button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><em>EzMusic</em></b></button>   </div>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
+	<script>
+	    $(window).load(function(){
+                $('#onload').modal('show');
+            });
+	</script>
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
