--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ body {
       <div class="modal-content">
         <div class="modal-header">
           <!--button type="button" class="close" data-dismiss="modal">×</button-->
-          <h4 class="modal-title"><em>Dedicated to my good friend Ms.Nancy!</em></h4>
+          <b style="color:#121212" class="modal-title"><em>Dedicated to my good friend Ms.Nancy!</em></b>
         </div>
         <div class="modal-body">
-         <p>
+         <p style="color:#121212">
 	 From day one, you have supported and believed in my dream!<br>
 	 And, when most folks would snicker and laugh, you never did!<br>
 	 I'll never forget what you have done for me! This one is for you!<br>	
@@ -68,7 +68,7 @@ body {
 </div>
 	
 	
-	<div id="header"><button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><em>EzMusic</em></b></button>   </div>
+	<div id="header"><button id="title" style="padding-right: 4px;padding-left: 4px;" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><em>EzMusic</em></b></button>   </div>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
