--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@ body {
 		left: 0px;
 	}	
 	#title {
+		width: 100px;
 		border: 0px;
 		border-radius: 6px;
 		background: rgba(0,0,0,0);
 		color:#FFF;	
-		padding-right: 4px;
-		padding-left: 4px;
 	}	
 	</style>
 </head>
@@ -76,9 +75,7 @@ body {
   <div id="app"></div>
 
 	<script>
-	    $(window).load(function(){
-                $('#myModal').modal('show');
-            });
+
 	</script>
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
