--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 	#title {
 		width: 100px;
 		border: 0px;
-		border-radius: 6px;
+		border-radius: 10px;
 		background: rgba(0,0,0,0);
 		color:#FFF;	
 	}	
@@ -52,7 +52,7 @@ body {
       <div class="modal-content">
         <div class="modal-header">
           <!--button type="button" class="close" data-dismiss="modal">×</button-->
-          <b style="color:#121212" class="modal-title"><em>Dedicated to my good friend Ms.Nancy!</em></b>
+          <b style="color:#121212" class="modal-title"><em>Dedicated to my good friend Nancy!</em></b>
         </div>
         <div class="modal-body">
          <p style="color:#121212">
@@ -62,7 +62,7 @@ body {
 		<em>Thank You!</em></p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal" aria-hidden="true"> Close </button>
+          <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
         </div>
       </div>
 
@@ -70,14 +70,14 @@ body {
 </div>
 	
 	
-	<div id="header"><button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><em>EzMusic</em></b></button>   </div>
+	<div id="header">
+		<button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><i class="fa fa-headphones"></i><em> EzMusic</em></b></button>
+	</div>
 	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
-	<script>
-
-	</script>
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
-	<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
+	<!-- Go to www.addthis.com/dashboard to customize your tools -->
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
 </html>
