Thank you to the one who made it possible!
And no... it will never be those one folks claiming to have given me something!
Truth is... I earned what they 'gave'! So, that makes it not-a-gift!
When you keep a score card and count these 'gifts' so you can collect on them later...
That is not-a-gift! 
Friends don't do that to friends! 
mmmmk

--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@ body {
         </div>
         <div class="modal-body">
          <p style="color:#121212">
-	 From day one, you have supported and believed in my dream!<br>
-	 And, when most folks would snicker and laugh, you never did!<br>
-	 I'll never forget what you have done for me! This one is for you!<br>	
+	 When most folks would snicker and laugh and call me crazy...<br>
+	 You believed them! But...<br>
+	 From day one, you have always been there for me!<br>
+	 You have supported my journey and, believed in my dreams!<br>
+	 But the one thing I am most grateful for...<br> 
+	 You taught me to believe in myself!<br>
 		<em>Thank You!</em></p>
         </div>
         <div class="modal-footer">
