That's all for now!
Thank you!

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@ body {
         <div class="modal-body">
          <p style="color:#121212">
 	 When most folks would snicker and laugh and call me crazy...<br>
-	 You believed them! But...<br>
+	 Okay, yeah, you believed them! (It's okay, me too!) But...<br>
 	 From day one, you have always been there for me!<br>
 	 You have supported my journey and, believed in my dreams!<br>
-	 But the one thing I am most grateful for...<br> 
+	 But the one thing I will always be most grateful for...<br> 
 	 You taught me to believe in myself!<br>
-		<em>Thank You!</em></p>
+		<i class="fa fa-heart"></i><em> Thank You! </em><i class="fa fa-heart"></i></p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
         </div>
       </div>
 
