no really this time
yes i am done here for today. thanks again... looks like I am in your debt friend

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
 		<i class="fa fa-heart"></i><em> Thank You! </em><i class="fa fa-heart"></i></p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
+          <button type="button" style="width:30px;height:30px;background:#f74545;color:#FFF;border-radius:10px;" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-close"></i></button>
         </div>
       </div>
 
