--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 </head>
 
 <body>
-	<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"  id="myModal">
+	<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="thank-you" aria-hidden="true"  id="myModal">
 
     <div class="modal-dialog">
 
@@ -76,7 +76,7 @@ body {
 	<div id="header">
 		<button id="title" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg" aria-hidden-"true"><b><i class="fa fa-headphones"></i><em> EzMusic</em></b></button>
 	</div>
-	 <p id="credit">Artwork Provided by: <b>Mrs. Bronwyn Wilson</b></p>
+	 <p id="credit">Artwork Provided by:<br> <b>Mrs. Bronwyn Wilson</b></p>
   <div id="app"></div>
 
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
